# voicinator

./: .env.template  .envrc  .gitignore  btc_addresses.db  credentials.py  databank.py  flake.nix  image_reader.py  payment.py  pyproject.toml  settings.py  summarize.py  telegram_bot.py  voice_converter.py  voice_conveter.py
overrides/pytesseract/: default.nix
settings/: 1923159737.json
tests/: credentials.py  test_get_secret.py
